crates/tmc-langs-cli/tests/snapshots/integration__compress_project_tar@csharp__non-compiling-exercise-2.snap
---
source: crates/tmc-langs-cli/tests/integration.rs
expression: files
input_file: sample_exercises/csharp/non-compiling-exercise
---
- non-compiling-exercise
- non-compiling-exercise/src
- non-compiling-exercise/src/NonCompilingSample
- non-compiling-exercise/src/NonCompilingSample/NonCompilingSample.csproj
- non-compiling-exercise/src/NonCompilingSample/Program.cs

