crates/tmc-langs-cli/tests/snapshots/integration__compress_project_tar@csharp__non-compiling-exercise.snap
---
source: crates/tmc-langs-cli/tests/integration.rs
expression: output
input_file: sample_exercises/csharp/non-compiling-exercise
---
output-kind: output-data
status: finished
message: compressed project from [PATH] to [PATH]
result: executed-command
data:
  output-data-kind: compressed-project-hash
  output-data: fe9da94e59a2dcd6b8e8ff430797cabc3f3fbecaccbc1b4b6a11da8eca472386
