crates/tmc-langs-cli/tests/snapshots/integration__compress_project_tar@csharp__passing-exercise-2.snap
---
source: crates/tmc-langs-cli/tests/integration.rs
expression: files
input_file: sample_exercises/csharp/passing-exercise
---
- passing-exercise
- passing-exercise/src
- passing-exercise/src/PassingSample
- passing-exercise/src/PassingSample/PassingSample.csproj
- passing-exercise/src/PassingSample/Program.cs

